APM-1504 Add apigee-deployments

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -34,3 +34,5 @@ extends:
     product_display_name: ${{ variables.product_display_name }}
     product_description: ${{ variables.product_description }}
     ping: false
+    apigee_deployments:
+      - environment: internal-dev
