--- a/azure/azure-build-pipeline.yml
+++ b/azure/azure-build-pipeline.yml
@@ -18,6 +18,7 @@ resources:
       type: github
       name: NHSDigital/api-management-utils
       endpoint: NHSDigital
+      ref: apm-1162-github-status-warn-on-fail
 
 variables:
   - template: project.yml
