APM-1504 Removes expose true and adds node env to try fix deployment issue.

--- a/ecs-proxies-deploy.yml
+++ b/ecs-proxies-deploy.yml
@@ -7,6 +7,8 @@ docker_service:
     environment:
       - name: SLACK_MESSAGE_LIMIT
         value: "10"
+      - name: NODE_ENV
+        value: "production"
     secrets:
       - name: SLACK_SIGNING_SECRET
         valueFrom: "/ptl/api-deployment/slackbot/SLACK_SIGNING_SECRET"
