APM-1504 Adds comment for redeployment

--- a/ecs-proxies-deploy.yml
+++ b/ecs-proxies-deploy.yml
@@ -6,7 +6,7 @@ docker_service:
       path: "/_health"
     environment:
       - name: SLACK_MESSAGE_LIMIT
-        value: "10"
+        value: "10" #Change after redeployment
       - name: NODE_ENV
         value: "production"
     secrets:
