--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -36,4 +36,6 @@ extends:
     ping: false
     apigee_deployments:
       - environment: internal-dev
+      - environment: internal_qa
+      - enviornment: internal_qa_sandbox
       - environment: prod
