--- a/docker/package.json
+++ b/docker/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node listen.js"
   },
   "repository": {
@@ -24,11 +24,18 @@
     "@slack/web-api": "^5.12.0",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
+    "delay": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-slack-upload": "^2.0.0",
-    "slackbots": "^1.2.0"
+    "slack-mock": "^1.1.1",
+    "slackbots": "^1.2.0",
+    "supertest": "^5.0.0"
   },
   "engines": {
     "node": "13.11.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
