--- a/docker/package.json
+++ b/docker/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/acarriedev/api-management-slackbot#readme",
   "dependencies": {
+    "@slack/bolt": "^3.3.0",
     "@slack/events-api": "^2.3.4",
     "@slack/web-api": "^5.12.0",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-slack-upload": "^2.0.0",
     "slackbots": "^1.2.0",
